--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">My Application</string>
     <string name="string_Previous">previous</string>
     <string name="string_Next">next</string>
+    <string name="confirmation">Confirmation</string>
+    <string name="sure_to_delete">Are you sure to delete this item</string>
 
 </resources>
