--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="string_Next">next</string>
     <string name="confirmation">Confirmation</string>
     <string name="sure_to_delete">Are you sure to delete this item</string>
+    <string name="str_price">Price</string>
+    <string name="str_title">Title</string>
+    <string name="str_name">Name</string>
 
 </resources>
